# discord-bot-newsletter

./: .env-exemple  .gitignore  README.md  draft.py  index.html  main.py  mkdocs.yml  newsletter.json  package-lock.json  package.json  pyproject.toml  requirements.txt  search.html  serverless.yml  sitemap.xml
.github/workflows/: python-app-script.yml
app/: Dockerfile  __init__.py  main.py  requirements.txt
app/api/v1/: routers.py
app/api/v1/endpoints/: channel.py  news.py
app/controllers/: channel.py  news.py
app/core/: controller.py  database.py  query.py  settings.py
app/models/: channel.py  news.py
app/schemas/: channel.py  news.py
app/tests/: confmodel.py
app/tests/core/: test_query.py
bot/: background_task.py  requirements.txt  schema.py
discord/: background_task.py  configurations.py
discord_bot/: Dockerfile  bot_background_task.py  bot_serverless_task.py  requirements.txt
discord_bot/api/: api_channel.py  api_news.py  base.py  schema.py
docs/: index.md
docs/nav/: discord.md
nav/discord/: index.html
search/: search_index.json
