[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["Fernando Celmer <email@fernandocelmer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
python-dotenv = "^1.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
mangum = "^0.17.0"
sqlalchemy = "^2.0.22"
pymysql = "^1.1.0"
requests = "^2.31.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
